...
        >

        <EditText
            android:hint="Key"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/Key_editText"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/textView"
            />



        <ScrollView
            android:id="@+id/SCROLLER_ID3"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:scrollbars="vertical"

            android:fillViewport="true">
            <EditText
                android:hint="Data"

                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/data_editText"
                android:layout_below="@+id/Key_editText"
                />
        </ScrollView>
        <LinearLayout
            android:layout_below="@+id/textView"
            android:orientation="horizontal"
...

            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Store"
                android:layout_margin="3dp"
                android:id="@+id/encript_button"
                android:layout_weight="2"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fetch"
                android:layout_margin="3dp"
                android:id="@+id/decypt_button"
                android:layout_weight="2"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_margin="3dp"
                android:id="@+id/deleteData_button"
                android:layout_weight="2"
                />



        </LinearLayout>
...
            android:fillViewport="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"

                android:id="@+id/decripted_Output_textView"

                />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>

