<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Secure Storage Encrypt/Decrypt \nIt does byte[] encrypt and decrypt.\nHere text is first converted to byte[] "
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>


    <EditText
        android:layout_marginTop="20dp"
        android:hint="Plain text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plainText"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Encrypt Data"
        android:id="@+id/buttonEncrypt"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Encrypted Text:"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:id="@+id/textViewEncrypted"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>


    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Decrypt Data"
        android:id="@+id/buttonDecrypt"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Decrypted Text"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewDecrpted"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_height="1dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Data Matched:"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewDataMatched"
        android:layout_gravity="center_horizontal" />

</LinearLayout>